added bootstrap and first go at new testrunner

--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -61,7 +61,7 @@
         <div>
             <h2>
                 <a class="categoryLink">${category}</a>
-                <input type="button" class="runSingleCategory runButton" value="run" />
+                <a class="runSingleTestCategory runButton" title="run">&nbsp;</a>
             </h2>
             <ul>
                 #{list items:tests.get(category), as:'testClass'}
