re-added scrolling to failed tests

--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -4,6 +4,7 @@
     <title>Play! - Litmus Test Runner</title>
     <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
     <script src="@{'/public/litmus/jquery-1.7.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+    <script src="@{'/public/litmus/jquery.scrollTo-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
 
     <link rel="stylesheet" href="@{'/public/litmus/style.css'}" type="text/css"/>
