--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -33,7 +33,7 @@
     <div id="stopped">
         <span id="start">Start !</span>
         &nbsp;
-        <span class="nbToRun">no</span> test<span class="nbToRunPluralize"></span> to run
+        <span class="nbToRun">no</span> test class<span class="nbToRunPluralize"></span> to run
         <span id="bookmarkSave">(<a href="#">Bookmark this link to save this configuration</a>) -
             <span id="unselectAll"><a href="#">Unselect all</a></span>
         </span>
