added failed, passed & total test count to header

--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -22,10 +22,9 @@
 <body>
 
 <div id="header" class="block">
-    <h1>Litmus Test Runner</h1>
-
+    <h1>Litmus Test Runner <span id="failedMessage"></span>
+    </h1>
     <p> Select the tests or categories to run, then click [Start] and pray </p>
-
     <div id="loading">working ...</div>
 </div>
 
