added select slow/fast tests links

--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -32,17 +32,30 @@
     <div id="stopped">
         <span id="start">Start !</span>
         &nbsp;
-        <span class="nbToRun">no</span> test class<span class="nbToRunPluralize"></span> to run
-        <span id="bookmarkSave">(<a href="#">Bookmark this link to save this configuration</a>) -
+        <span class="nbToRun">no</span> test class<span class="nbToRunPluralize"></span> to run.
+
+        <span id="quickLinks">
+            &nbsp;
+            <span>Select:
+                <span id="selectAllLink"><a href="#">all</a></span> -
+                <span id="selectSlowTestsLink"><a href="#">slow</a></span> -
+                <span id="selectFastTestsLink"><a href="#">fast</a></span>
+            </span>
+                  &nbsp;
+            <span>Run:
+                <span id="runAllLink"><a href="#">all</a></span> -
+                <span id="runSlowTestsLink"><a href="#">slow</a></span> -
+                <span id="runFastTestsLink"><a href="#">fast</a></span>
+            </span>
+        </span>
+
+
+        <span id="bookmarkSave">
+            <a href="#">Bookmark this link to save this configuration</a> -
             <span id="unselectAll"><a href="#">Unselect all</a></span>
         </span>
 
-        <span id="quickLinks">
-            <span id="selectAllLink">(<a href="#">Select all</a></span> -
-            <span id="runAllLink"><a href="#">Run all</a>)</span>
-            <span id="runSlowTestsLink"><a href="#">Run Slow Tests</a></span>
-            <span id="runFastTestsLink"><a href="#">Run Fast Tests</a></span>
-        </span>
+
     </div>
 
     <div id="started">
