--- a/public/litmus/style.css
+++ b/public/litmus/style.css
@@ -59,7 +59,6 @@ small {
 #tests h2 {
     color: #333;
     font-weight: normal;
-    border-left: 4px solid #ccc;
     padding-left: 5px;
     -moz-user-select: none;
     cursor: pointer;
@@ -75,13 +74,9 @@ li {
     padding: 2px;
 }
 
-.test a.runButton {
-    background-image: url("favicon.png");
-    background-repeat: no-repeat;
-    background-color: transparent;
+.runSingleCategory {
     position:relative;
-    top: 4px;
-    left: 6px;
+    top: -3px;
 }
 
 .test a {
