reverted label change

--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -32,7 +32,7 @@
     <div id="stopped">
         <span id="start">Start !</span>
         &nbsp;
-        <span class="nbToRun">no</span> test class<span class="nbToRunPluralize"></span> to run.
+        <span class="nbToRun">no</span> test<span class="nbToRunPluralize"></span> to run.
 
         <span id="quickLinks">
             &nbsp;
