--- a/samples/app/views/HtmlController/aPage.html
+++ b/samples/app/views/HtmlController/aPage.html
@@ -1,4 +1,4 @@
-#{extends 'main.html' /}
+#{extends 'app.html' /}
 #{set title:'Home' /}
 
 <a id="openContactForm" href="/some/path">open contact form</a>
